--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ p {
 
 .mainDetails {
 	padding: 25px 35px;
-	border-bottom: 2px solid #cf0505;
+	border-bottom: 2px solid #1b35b5;
 	background: #ededed;
 }
 
@@ -127,7 +127,7 @@ section:last-child {
 	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
 	font-style: italic;
 	font-size: 1.5em;
-	color: #cf0505;
+	color: #1b35b5;
 }
 
 .sectionContent h2 {
@@ -335,8 +335,9 @@ section:last-child {
 	-webkit-animation-delay: 0, 1s;
 	-moz-animation-delay: 0, 1s;
 	animation-delay: 0, 1s;
-	color:#cf0505 
+	color:#1b35b5
 }
+
 
 .delayThree {
 	-webkit-animation-delay: 0, 1.5s;
